--- a/command-bot-with-sso/.webappignore
+++ b/command-bot-with-sso/.webappignore
@@ -1,6 +1,6 @@
-node_modules/.bin
 .fx
 .deployment
+.localSettings
 .vscode
 *.js.map
 *.ts.map
@@ -13,5 +13,9 @@ local.settings.json
 test
 tsconfig.json
 .DS_Store
+node_modules/.bin
 node_modules/ts-node
 node_modules/typescript
+appPackage/
+infra/
+teamsfx/
