--- a/command-bot-with-sso/appPackage/manifest.json
+++ b/command-bot-with-sso/appPackage/manifest.json
@@ -1,26 +1,26 @@
 {
-    "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.13/MicrosoftTeams.schema.json",
-    "manifestVersion": "1.13",
+    "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.15/MicrosoftTeams.schema.json",
+    "manifestVersion": "1.15",
     "version": "1.0.0",
     "id": "${{TEAMS_APP_ID}}",
     "packageName": "com.microsoft.teams.extension",
     "developer": {
         "name": "Teams App, Inc.",
         "websiteUrl": "https://www.example.com",
-        "privacyUrl": "https://www.example.com/termofuse",
-        "termsOfUseUrl": "https://www.example.com/privacy"
+        "privacyUrl": "https://www.example.com/privacy",
+        "termsOfUseUrl": "https://www.example.com/termofuse"
     },
     "icons": {
-        "color": "resources/color.png",
-        "outline": "resources/outline.png"
+        "color": "color.png",
+        "outline": "outline.png"
     },
     "name": {
-        "short": "${{CONFIG__MANIFEST__APPNAME__SHORT}}",
-        "full": "${{CONFIG__MANIFEST__APPNAME__FULL}}"
+        "short": "sso-command-bot-${{TEAMSFX_ENV}}",
+        "full": "full name for sso-command-bot"
     },
     "description": {
-        "short": "Short description of ${{CONFIG__MANIFEST__APPNAME__SHORT}}",
-        "full": "Full description of ${{CONFIG__MANIFEST__APPNAME__SHORT}}"
+        "short": "short description for sso-command-bot",
+        "full": "full description for sso-command-bot"
     },
     "accentColor": "#FFFFFF",
     "bots": [
@@ -66,7 +66,7 @@
         "messageTeamMembers"
     ],
     "validDomains": [
-        "${{PROVISIONOUTPUT__WEBAPPOUTPUT__DOMAIN}}"
+        "${{BOT_DOMAIN}}"
     ],
     "webApplicationInfo": {
         "id": "${{AAD_APP_CLIENT_ID}}",
