--- a/command-bot-with-sso/package.json
+++ b/command-bot-with-sso/package.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "main": "./lib/index.js",
     "scripts": {
-        "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run dev",
+        "dev:teamsfx": "env-cmd --silent -f .localSettings npm run dev",
         "dev": "nodemon --watch ./src --exec node --inspect=9239 --signal SIGINT -r ts-node/register ./src/index.ts",
         "build": "tsc --build && shx cp -r ./src/adaptiveCards ./lib/src && copyfiles src/public/*.html lib/",
         "start": "node ./lib/src/index.js",
