chore(v3): migrate graph-connector-app to V3 (#626)
* chore(v3): migrate graph-connector-app to V3 (use migration tool)

* chore(v3): manual edit

* chore(v3): remove projectId

* chore(v3): resolve comments

* chore(v3): update gitignore

* chore(v3): update gitignore

* chore(v3): update dev:teamsfx script

* chore(v3): update bicep

* chore(v3): rename aad manifest

* chore(v3): resolve comments

--- a/graph-connector-app/.gitignore
+++ b/graph-connector-app/.gitignore
@@ -1,12 +1,13 @@
-
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 # TeamsFx files
-node_modules
-.fx/configs/localSettings.json
-.fx/states/*.userdata
+env/.env.*
 .DS_Store
-.env.teamsfx.local
-subscriptionInfo.json
 build
-.fx/configs/config.local.json
-.fx/states/state.local.json
-.backup
+.deployment
+.localSettings
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
