--- a/command-bot-with-sso/.vscode/tasks.json
+++ b/command-bot-with-sso/.vscode/tasks.json
@@ -8,12 +8,10 @@
             "label": "Start Teams App Locally",
             "dependsOn": [
                 "Validate & install prerequisites",
-                "Install npm packages",
                 "Start local tunnel",
-                "Set up bot",
-                "Set up SSO",
-                "Build & upload Teams manifest",
-                "Start services"
+                "Create resources",
+                "Build project",
+                "Start application"
             ],
             "dependsOrder": "sequence"
         },
@@ -27,29 +25,11 @@
                 "prerequisites": [
                     "nodejs", // Validate if Node.js is installed.
                     "m365Account", // Sign-in prompt for Microsoft 365 account, then validate if the account enables the sideloading permission.
-                    "ngrok", // Install Ngrok. Bot project requires a public message endpoint, and ngrok can help create public tunnel for your local service.
                     "portOccupancy" // Validate available ports to ensure those debug ones are not occupied.
                 ],
                 "portOccupancy": [
                     3978, // bot service port
                     9239 // bot inspector port for Node.js debugger
-                ]
-            }
-        },
-        {
-            // Check if all the npm packages are installed and will install them if not.
-            // See https://aka.ms/teamsfx-npm-package-task to know the details and how to customize the args.
-            "label": "Install npm packages",
-            "type": "teamsfx",
-            "command": "debug-npm-install",
-            "args": {
-                "projects": [
-                    {
-                        "cwd": "${workspaceFolder}/bot",
-                        "npmInstallArgs": [
-                            "--no-audit"
-                        ]
-                    }
                 ]
             }
         },
@@ -64,51 +44,40 @@
             "type": "teamsfx",
             "command": "debug-start-local-tunnel",
             "args": {
-                "ngrokArgs": "http 3978 --log=stdout --log-format=logfmt"
+                "ngrokArgs": "http 3978 --log=stdout --log-format=logfmt",
+                "env": "local",
+                "output": {
+                    "endpoint": "BOT_ENDPOINT",
+                    "domain": "BOT_DOMAIN"
+                }
             },
             "isBackground": true,
             "problemMatcher": "$teamsfx-local-tunnel-watch"
         },
         {
-            // Register resources and prepare local launch information for Bot.
-            // See https://aka.ms/teamsfx-debug-set-up-bot-task to know the details and how to customize the args.
-            "label": "Set up bot",
+            // Create the debug resources.
+            // See https://aka.ms/teamsfx-provision-task to know the details and how to customize the args.
+            "label": "Create resources",
             "type": "teamsfx",
-            "command": "debug-set-up-bot",
+            "command": "provision",
             "args": {
-                //// Enter your own bot information if using the existing bot. ////
-                // "botId": "",
-                // "botPassword": "", // use plain text or environment variable reference like ${env:BOT_PASSWORD}
-                "botMessagingEndpoint": "/api/messages" // use your own routing "/any/path", or full URL "https://contoso.com/any/path"
+                "template": "${workspaceFolder}/teamsapp.local.yml",
+                "env": "local"
             }
         },
         {
-            // Register resources and prepare local launch information for SSO functionality.
-            // See https://aka.ms/teamsfx-debug-set-up-sso-task to know the details and how to customize the args.
-            "label": "Set up SSO",
+            // Build project.
+            // See https://aka.ms/teamsfx-deploy-task to know the details and how to customize the args.
+            "label": "Build project",
             "type": "teamsfx",
-            "command": "debug-set-up-sso",
+            "command": "deploy",
             "args": {
-                //// Enter your own AAD app information if using the existing AAD app. ////
-                // "objectId": "",
-                // "clientId": "",
-                // "clientSecret": "", // use plain text or environment variable reference like ${env:CLIENT_SECRET}
-                // "accessAsUserScopeId": "
+                "template": "${workspaceFolder}/teamsapp.local.yml",
+                "env": "local"
             }
         },
         {
-            // Build and upload Teams manifest.
-            // See https://aka.ms/teamsfx-debug-prepare-manifest-task to know the details and how to customize the args.
-            "label": "Build & upload Teams manifest",
-            "type": "teamsfx",
-            "command": "debug-prepare-manifest",
-            "args": {
-                //// Enter your own Teams app package path if using the existing Teams manifest. ////
-                // "appPackagePath": ""
-            }
-        },
-        {
-            "label": "Start services",
+            "label": "Start application",
             "dependsOn": [
                 "Start bot"
             ]
@@ -119,7 +88,7 @@
             "command": "npm run dev:teamsfx",
             "isBackground": true,
             "options": {
-                "cwd": "${workspaceFolder}/bot"
+                "cwd": "${workspaceFolder}"
             },
             "problemMatcher": {
                 "pattern": [
