--- a/todo-list-with-Azure-backend/.vscode/tasks.json
+++ b/todo-list-with-Azure-backend/.vscode/tasks.json
@@ -8,10 +8,8 @@
             "label": "Start Teams App Locally",
             "dependsOn": [
                 "Validate & install prerequisites",
-                "Install npm packages",
-                "Set up tab",
-                "Set up SSO",
-                "Build & upload Teams manifest",
+                "Create resources",
+                "Build project",
                 "Start services"
             ],
             "dependsOrder": "sequence"
@@ -26,9 +24,6 @@
                 "prerequisites": [
                     "nodejs", // Validate if Node.js is installed.
                     "m365Account", // Sign-in prompt for Microsoft 365 account, then validate if the account enables the sideloading permission.
-                    "devCert", // Install localhost SSL certificate. It's used to serve the development sites over HTTPS to debug the Tab app in Teams.
-                    "func", // Install Azure Functions Core Tools. It's used to serve Azure Functions hosted project locally.
-                    "dotnet", // Ensure .NET Core SDK is installed. TeamsFx Azure Functions project depends on extra .NET binding extensions for HTTP trigger authorization.
                     "portOccupancy" // Validate available ports to ensure those debug ones are not occupied.
                 ],
                 "portOccupancy": [
@@ -39,61 +34,25 @@
             }
         },
         {
-            // Check if all the npm packages are installed and will install them if not.
-            // See https://aka.ms/teamsfx-npm-package-task to know the details and how to customize the args.
-            "label": "Install npm packages",
+            // Create the debug resources.
+            // See https://aka.ms/teamsfx-provision-task to know the details and how to customize the args.
+            "label": "Create resources",
             "type": "teamsfx",
-            "command": "debug-npm-install",
+            "command": "provision",
             "args": {
-                "projects": [
-                    {
-                        "cwd": "${workspaceFolder}/tabs",
-                        "npmInstallArgs": [
-                            "--no-audit"
-                        ]
-                    },
-                    {
-                        "cwd": "${workspaceFolder}/api",
-                        "npmInstallArgs": [
-                            "--no-audit"
-                        ]
-                    }
-                ]
+                "template": "${workspaceFolder}/teamsapp.local.yml",
+                "env": "local"
             }
         },
         {
-            // Prepare local launch information for Tab.
-            // See https://aka.ms/teamsfx-debug-set-up-tab-task to know the details and how to customize the args.
-            "label": "Set up tab",
+            // Build project.
+            // See https://aka.ms/teamsfx-deploy-task to know the details and how to customize the args.
+            "label": "Build project",
             "type": "teamsfx",
-            "command": "debug-set-up-tab",
+            "command": "deploy",
             "args": {
-                "baseUrl": "https://localhost:53000"
-            }
-        },
-        {
-            // Register resources and prepare local launch information for SSO functionality.
-            // See https://aka.ms/teamsfx-debug-set-up-sso-task to know the details and how to customize the args.
-            "label": "Set up SSO",
-            "type": "teamsfx",
-            "command": "debug-set-up-sso",
-            "args": {
-                //// Enter your own AAD app information if using the existing AAD app. ////
-                // "objectId": "",
-                // "clientId": "",
-                // "clientSecret": "", // use plain text or environment variable reference like ${env:CLIENT_SECRET}
-                // "accessAsUserScopeId": "
-            }
-        },
-        {
-            // Build and upload Teams manifest.
-            // See https://aka.ms/teamsfx-debug-prepare-manifest-task to know the details and how to customize the args.
-            "label": "Build & upload Teams manifest",
-            "type": "teamsfx",
-            "command": "debug-prepare-manifest",
-            "args": {
-                //// Enter your own Teams app package path if using the existing Teams manifest. ////
-                // "appPackagePath": ""
+                "template": "${workspaceFolder}/teamsapp.local.yml",
+                "env": "local"
             }
         },
         {
