--- a/graph-connector-bot/bot/package.json
+++ b/graph-connector-bot/bot/package.json
@@ -21,10 +21,10 @@
     "@azure/msal-node": "^1.1.0",
     "@microsoft/microsoft-graph-client": "^3.0.1",
     "@microsoft/teamsfx": "^2.0.0",
-    "adaptive-expressions": "^4.15.0",
+    "adaptive-expressions": "^4.18.0",
     "adaptivecards-templating": "2.1.0",
-    "botbuilder": "^4.15.0",
-    "botbuilder-dialogs": "^4.15.0",
+    "botbuilder": "^4.18.0",
+    "botbuilder-dialogs": "^4.18.0",
     "csv-parse": "^5.3.0",
     "isomorphic-fetch": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.11.9",
-    "@types/restify": "8.5.5",
+    "@types/restify": "^8.5.5",
     "env-cmd": "^10.1.0",
     "nodemon": "^2.0.7",
     "shx": "^0.3.3",
