--- a/query-org-user-with-message-extension-sso/package.json
+++ b/query-org-user-with-message-extension-sso/package.json
@@ -23,12 +23,12 @@
     "dependencies": {
         "@microsoft/microsoft-graph-client": "^3.0.2",
         "@microsoft/teamsfx": "^2.0.0",
-        "botbuilder": ">=4.15.0 <5.0.0",
+        "botbuilder": ">=4.18.0 <5.0.0",
         "isomorphic-fetch": "^3.0.0",
         "restify": "^8.5.1"
     },
     "devDependencies": {
-        "@types/restify": "8.4.2",
+        "@types/restify": "^8.5.5",
         "@types/node": "^14.0.0",
         "env-cmd": "^10.1.0",
         "ts-node": "^10.4.0",
