--- a/hello-world-tab/.vscode/tasks.json
+++ b/hello-world-tab/.vscode/tasks.json
@@ -13,7 +13,7 @@
         },
         {
             // Check all required prerequisites.
-            // See https://aka.ms/teamsfx-check-prerequisites-task to know the details and how to customize the args.
+            // See https://aka.ms/teamsfx-tasks/check-prerequisites to know the details and how to customize the args.
             "label": "Validate prerequisites",
             "type": "teamsfx",
             "command": "debug-check-prerequisites",
@@ -30,7 +30,7 @@
         },
         {
             // Create the debug resources.
-            // See https://aka.ms/teamsfx-provision-task to know the details and how to customize the args.
+            // See https://aka.ms/teamsfx-tasks/provision to know the details and how to customize the args.
             "label": "Create resources",
             "type": "teamsfx",
             "command": "provision",
@@ -41,7 +41,7 @@
         },
         {
             // Build project.
-            // See https://aka.ms/teamsfx-deploy-task to know the details and how to customize the args.
+            // See See https://aka.ms/teamsfx-tasks/deploy to know the details and how to customize the args.
             "label": "Build project",
             "type": "teamsfx",
             "command": "deploy",
