--- a/todo-list-with-Azure-backend/env/.env.local
+++ b/todo-list-with-Azure-backend/env/.env.local
@@ -1,3 +1,24 @@
+# Built-in environment variables
 TEAMSFX_ENV=local
-CONFIG__MANIFEST__APPNAME__SHORT=to-do-list-local-debug
-CONFIG__MANIFEST__APPNAME__FULL=Full name for to-do-list-local-debug
+
+# SQL Azure environment variables
+SQL_ENDPOINT=
+SQL_DATABASE_NAME=
+SQL_USER_NAME=
+SQL_PASSWORD=
+
+# Generated during provision, you can also add your own variables. If you're adding a secret value, add SECRET_ prefix to the name so Teams Toolkit can handle them properly
+TAB_DOMAIN=
+TAB_ENDPOINT=
+TEAMS_APP_ID=
+AAD_APP_CLIENT_ID=
+SECRET_AAD_APP_CLIENT_SECRET=
+AAD_APP_OBJECT_ID=
+AAD_APP_TENANT_ID=
+AAD_APP_OAUTH_AUTHORITY=
+AAD_APP_OAUTH_AUTHORITY_HOST=
+AAD_APP_ACCESS_AS_USER_PERMISSION_ID=
+
+# Generated during deploy, you can also add your own variables. If you're adding a secret value, add SECRET_ prefix to the name so Teams Toolkit can handle them properly
+SSL_CRT_FILE=
+SSL_KEY_FILE=
