--- a/todo-list-with-Azure-backend/tabs/package.json
+++ b/todo-list-with-Azure-backend/tabs/package.json
@@ -17,7 +17,7 @@
     "env-cmd": "^10.1.0"
   },
   "scripts": {
-    "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run start",
+    "dev:teamsfx": "env-cmd --silent -f .localSettings npm run start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
