--- a/bot-sso/package.json
+++ b/bot-sso/package.json
@@ -26,14 +26,15 @@
     "@microsoft/teamsfx": "^2.0.0",
     "adaptive-expressions": "^4.15.0",
     "adaptivecards-templating": "2.1.0",
-    "botbuilder": "^4.15.0",
-    "botbuilder-dialogs": "^4.15.0",
+    "botbuilder": "^4.18.0",
+    "botbuilder-dialogs": "^4.18.0",
     "isomorphic-fetch": "^3.0.0",
     "restify": "^10.0.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/restify": "8.5.5",
+    "@types/node": "^14.0.0",
     "env-cmd": "^10.1.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4",
