fix: update keyword based on schema change

--- a/adaptive-card-notification/appPackage/manifest.json
+++ b/adaptive-card-notification/appPackage/manifest.json
@@ -29,7 +29,7 @@
             "scopes": [
                 "personal",
                 "team",
-                "groupchat"
+                "groupChat"
             ],
             "supportsFiles": false,
             "isNotificationOnly": false
