--- a/stocks-update-notification-bot-dotnet/StocksUpdateNotificationBot/appPackage/manifest.json
+++ b/stocks-update-notification-bot-dotnet/StocksUpdateNotificationBot/appPackage/manifest.json
@@ -29,7 +29,7 @@
             "scopes": [
                 "personal",
                 "team",
-                "groupchat"
+                "groupChat"
             ],
             "supportsFiles": false,
             "isNotificationOnly": false
