--- a/todo-list-with-Azure-backend/.gitignore
+++ b/todo-list-with-Azure-backend/.gitignore
@@ -1,11 +1,19 @@
-node_modules
-.fx/configs/localSettings.json
-.fx/states/*.userdata
+# TeamsFx files
+env/.env.*
 .DS_Store
-.archive
-.archive.log
-.env.teamsfx.local
-subscriptionInfo.json
+.localSettings
 build
-.fx/configs/config.local.json
-.fx/states/state.local.json
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env
+.deployment
