--- a/graph-toolkit-contact-exporter/aad.manifest.json
+++ b/graph-toolkit-contact-exporter/aad.manifest.json
@@ -23,6 +23,10 @@
                 {
                     "id": "User.Read",
                     "type": "Scope"
+                },
+                {
+                    "id": "User.ReadBasic.All",
+                    "type": "Scope"
                 }
             ]
         }
