--- a/graph-toolkit-contact-exporter/package.json
+++ b/graph-toolkit-contact-exporter/package.json
@@ -10,15 +10,16 @@
         "@microsoft/mgt-element": "^2.8.0",
         "@microsoft/mgt-react": "^2.8.0",
         "@microsoft/mgt-teamsfx-provider": "^2.8.0",
-        "@microsoft/microsoft-graph-client": "^3.0.1",
-        "@microsoft/teams-js": "^2.7.1",
-        "@microsoft/teamsfx": "^2.2.0",
-        "@microsoft/teamsfx-react": "^2.0.0",
+        "@microsoft/mgt": "^2.8.0",
+        "@microsoft/teams-js": "^2.2.0",
+        "@microsoft/teamsfx": "^2.0.0",
         "axios": "^0.21.1",
-        "react": "^16.14.0",
-        "react-dom": "^16.14.0",
+        "react": "^16.13.1",
+        "react-csv": "^2.0.3",
+        "react-dom": "^16.13.1",
         "react-router-dom": "^5.1.2",
-        "react-scripts": "^5.0.1"
+        "react-scripts": "^5.0.0",
+        "typestyle": "^2.1.0"
     },
     "devDependencies": {
         "env-cmd": "^10.1.0"
