--- a/query-org-user-with-message-extension-sso/env/.env.local
+++ b/query-org-user-with-message-extension-sso/env/.env.local
@@ -1,1 +1,11 @@
-TEAMS_APP_NAME=QueryOrgUserWithMESSOTeamsApp
+# Built-in environment variables
+TEAMSFX_ENV=local 
+
+# Generated during provision, you can also add your own variables.
+BOT_ID=
+TEAMS_APP_ID=
+BOT_DOMAIN=
+BOT_ENDPOINT= 
+
+# Secrets. You can add your own secret value, prefixed with SECRET_
+SECRET_BOT_PASSWORD=
