--- a/team-central-dashboard/teamsapp.local.yml
+++ b/team-central-dashboard/teamsapp.local.yml
@@ -29,7 +29,7 @@ configureApp:
         
   - uses: aadApp/update
     with:
-      manifestPath: "./aad.manifest.template.json"
+      manifestPath: "./aad.manifest.json"
       outputFilePath : ./build/aad.manifest.${{TEAMSFX_ENV}}.json
   - uses: teamsApp/validate
     with:
