--- a/team-central-dashboard/teamsapp.yml
+++ b/team-central-dashboard/teamsapp.yml
@@ -81,7 +81,7 @@ registerApp:
 configureApp:
   - uses: aadApp/update
     with:
-      manifestPath: "./aad.manifest.template.json"
+      manifestPath: "./aad.manifest.json"
       outputFilePath: ./build/aad.manifest.${{TEAMSFX_ENV}}.json
   # Output: following environment variable will be persisted in current environment's .env file.
   # AAD_APP_ACCESS_AS_USER_PERMISSION_ID: the id of access_as_user permission which is used to enable SSO
