--- a/share-now/.vscode/tasks.json
+++ b/share-now/.vscode/tasks.json
@@ -50,9 +50,8 @@
                 "ngrokArgs": "http 3978 --log=stdout --log-format=logfmt",
                 "env": "local",
                 "output": {
-                    // Keep consistency with upgraded configuration.
-                    "endpoint": "PROVISIONOUTPUT__BOTOUTPUT__SITEENDPOINT",
-                    "domain": "PROVISIONOUTPUT__BOTOUTPUT__DOMAIN"
+                    "endpoint": "PROVISIONOUTPUT",
+                    "domain": "BOT_DOMAIN"
                 }
             },
             "isBackground": true,
