--- a/share-now/env/.env.dev
+++ b/share-now/env/.env.dev
@@ -1,3 +1,6 @@
+# Built-in environment variables
 TEAMSFX_ENV=dev
-CONFIG__MANIFEST__APPNAME__SHORT=shareNow
-CONFIG__MANIFEST__APPNAME__FULL=Full name for shareNow
+
+# SQL Azure environment variables
+SQL_USER_NAME=
+SQL_PASSWORD=
