--- a/share-now/env/.env.local
+++ b/share-now/env/.env.local
@@ -1,3 +1,8 @@
+# Built-in environment variables
 TEAMSFX_ENV=local
-CONFIG__MANIFEST__APPNAME__SHORT=shareNow-local-debug
-CONFIG__MANIFEST__APPNAME__FULL=Full name for shareNow-local-debug
+
+# SQL Azure environment variables
+SQL_ENDPOINT=
+SQL_DATABASE_NAME=
+SQL_USER_NAME=
+SQL_PASSWORD=
