chore: upgrade to v5

--- a/graph-toolkit-productivity-hub-aspnetcore/OneProductivityHubAspNetCore/Properties/launchSettings.json
+++ b/graph-toolkit-productivity-hub-aspnetcore/OneProductivityHubAspNetCore/Properties/launchSettings.json
@@ -4,7 +4,7 @@
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "launchUrl": "https://teams.microsoft.com/l/app/%TEAMSAPPID%?installAppPackage=true&webjoin=true&appTenantId=%TENANTID%&login_hint=%USERNAME%",
+      "launchUrl": "https://teams.microsoft.com/l/app/3d4119ba-51bb-4767-998e-22e64c86a71c?installAppPackage=true&webjoin=true&appTenantId=72f988bf-86f1-41af-91ab-2d7cd011db47&login_hint=wenyutang@microsoft.com",
       "applicationUrl": "https://localhost:44302;http://localhost:2544",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
