Fixes for PR #638

--- a/whos-next-meeting-app/.gitignore
+++ b/whos-next-meeting-app/.gitignore
@@ -7,6 +7,5 @@ node_modules
 
 subscriptionInfo.json
 build
-.fx/configs/config.local.json
-.fx/states/state.local.json
+.fx/states/state.*.json
 .backup
