--- a/share-now/appPackage/manifest.json
+++ b/share-now/appPackage/manifest.json
@@ -98,6 +98,6 @@
     ],
     "webApplicationInfo": {
         "id": "${{AAD_APP_CLIENT_ID}}",
-        "resource": "api://${{TAB_DOMAIN}}/${{AAD_APP_CLIENT_ID}}"
+        "resource": "api://${{TAB_DOMAIN}}/botid-${{BOT_ID}}"
     }
 }
