chore(v3):  update .env.dev

--- a/share-now/env/.env.dev
+++ b/share-now/env/.env.dev
@@ -15,10 +15,10 @@ TEAMS_APP_ID=
 AAD_APP_CLIENT_ID=
 SECRET_AAD_APP_CLIENT_SECRET=
 AAD_APP_OBJECT_ID=
-AAD_APP_OAUTH2_PERMISSION_ID=
 AAD_APP_TENANT_ID=
 AAD_APP_OAUTH_AUTHORITY_HOST=
 AAD_APP_OAUTH_AUTHORITY=
+AAD_APP_ACCESS_AS_USER_PERMISSION_ID=
 TAB_AZURE_STORAGE_RESOURCE_ID=
 TAB_ENDPOINT=
 TAB_DOMAIN=
@@ -26,3 +26,5 @@ BOT_DOMAIN=
 BOT_ID=
 SECRET_BOT_PASSWORD=
 BOT_AZURE_APP_SERVICE_RESOURCE_ID=
+FUNCTION_ENDPOINT=
+FUNCTION_RESOURCE_ID=
