chore(v3): create from bot-sso sample

--- a/graph-connector-bot/.gitignore
+++ b/graph-connector-bot/.gitignore
@@ -1,13 +1,14 @@
-node_modules
-.backup
-.fx/configs/localSettings.json
-.fx/states/*.userdata
+# TeamsFx files
+env/.env.*
+.localSettings
+
+# dependencies
+node_modules/
+
+# misc
+.env
+.deployment
 .DS_Store
-.archive
-.archive.log
-.env.teamsfx.local
-subscriptionInfo.json
-.fx/configs/config.local.json
-.fx/states/state.local.json
-build
-.backup
+
+# build
+lib/
