--- a/graph-connector-bot/teamsapp.local.yml
+++ b/graph-connector-bot/teamsapp.local.yml
@@ -3,7 +3,7 @@ version: 1.0.0
 registerApp:
   - uses: aadApp/create # Creates a new AAD app to authenticate users if AAD_APP_CLIENT_ID environment variable is empty
     with:
-      name: sso-bot-aad # Note: when you run configure/aadApp, the AAD app name will be updated based on the definition of manifest. If you don't want to change the name, ensure the name in AAD manifest is same with the name defined here.
+      name: graph-connector-bot-aad # Note: when you run configure/aadApp, the AAD app name will be updated based on the definition of manifest. If you don't want to change the name, ensure the name in AAD manifest is same with the name defined here.
       generateClientSecret: true # If the value is false, the action will not generate client secret for you
       # Output: following environment variable will be persisted in current environment's .env file.
       # AAD_APP_CLIENT_ID: the client id of AAD app
@@ -15,14 +15,14 @@ registerApp:
 
   - uses: teamsApp/create # Creates a Teams app
     with:
-      name: sso-bot-${{TEAMSFX_ENV}} # Teams app name
+      name: graph-connector-bot-${{TEAMSFX_ENV}} # Teams app name
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
 provision:
   - uses: botAadApp/create # Creates a new AAD app for bot if BOT_ID environment variable is empty
     with:
-      name: sso-bot
+      name: graph-connector-bot
     # Output: following environment variable will be persisted in current environment's .env file.
     # BOT_ID: the AAD app client id created for bot
     # SECRET_BOT_PASSWORD: the AAD app client secret created for bot
@@ -30,7 +30,7 @@ provision:
   - uses: botFramework/create # Create or update the bot registration on dev.botframework.com
     with:
       botId: ${{BOT_ID}}
-      name: sso-bot
+      name: graph-connector-bot
       messagingEndpoint: ${{BOT_ENDPOINT}}/api/messages
       description: ""
       channels:
