Restored .gitignore per Huihui instructions

--- a/whos-next-meeting-app/.gitignore
+++ b/whos-next-meeting-app/.gitignore
@@ -7,5 +7,6 @@ node_modules
 
 subscriptionInfo.json
 build
-.fx/states/state.*.json
+.fx/configs/config.local.json
+.fx/states/state.local.json
 .backup
