--- a/hello-world-tab-with-backend/teamsapp.yml
+++ b/hello-world-tab-with-backend/teamsapp.yml
@@ -45,10 +45,14 @@ deploy:
     with:
       workingDirectory: api
       args: run build --if-present
+  - uses: prerequisite/install # Install dependencies
+    with:
+      dotnet: true
   - uses: cli/runDotnetCommand
     with:
       workingDirectory: api
       args: build extensions.csproj -o bin --ignore-failed-sources
+      execPath: ${{DOTNET_PATH}}
   - uses: azureFunctions/deploy
     with:
       # deploy base folder
