--- a/todo-list-with-Azure-backend/teamsapp.yml
+++ b/todo-list-with-Azure-backend/teamsapp.yml
@@ -49,10 +49,15 @@ deploy:
       workingDirectory: api
       args: install
 
+  - uses: prerequisite/install # Install dependencies
+    with:
+      dotnet: true
+
   - uses: cli/runDotnetCommand
     with:
       workingDirectory: api
       args: build extensions.csproj -o bin --ignore-failed-sources
+      execPath: ${{DOTNET_PATH}}
 
   - uses: azureFunctions/deploy
     with:
