--- a/graph-connector-app/.vscode/tasks.json
+++ b/graph-connector-app/.vscode/tasks.json
@@ -8,7 +8,7 @@
             "label": "Start Teams App Locally",
             "dependsOn": [
                 "Validate & install prerequisites",
-                "Create resources",
+                "Provision",
                 "Install tools and Build project",
                 "Start services"
             ],
@@ -36,11 +36,10 @@
         {
             // Create the debug resources.
             // See https://aka.ms/teamsfx-tasks/provision to know the details and how to customize the args.
-            "label": "Create resources",
+            "label": "Provision",
             "type": "teamsfx",
             "command": "provision",
             "args": {
-                "template": "${workspaceFolder}/teamsapp.local.yml",
                 "env": "local"
             }
         },
@@ -51,7 +50,6 @@
             "type": "teamsfx",
             "command": "deploy",
             "args": {
-                "template": "${workspaceFolder}/teamsapp.local.yml",
                 "env": "local"
             }
         },
