--- a/hello-world-bot/.vscode/tasks.json
+++ b/hello-world-bot/.vscode/tasks.json
@@ -9,8 +9,8 @@
             "dependsOn": [
                 "Validate & install prerequisites",
                 "Start local tunnel",
-                "Create resources",
-                "Build project",
+                "Provision",
+                "Deploy",
                 "Start application"
             ],
             "dependsOrder": "sequence"
@@ -56,7 +56,7 @@
         {
             // Create the debug resources.
             // See https://aka.ms/teamsfx-tasks/provision to know the details and how to customize the args.
-            "label": "Create resources",
+            "label": "Provision",
             "type": "teamsfx",
             "command": "provision",
             "args": {
@@ -67,7 +67,7 @@
         {
             // Build project.
             // See See https://aka.ms/teamsfx-tasks/deploy to know the details and how to customize the args.
-            "label": "Build project",
+            "label": "Deploy",
             "type": "teamsfx",
             "command": "deploy",
             "args": {
