--- a/hello-world-tab/.vscode/tasks.json
+++ b/hello-world-tab/.vscode/tasks.json
@@ -5,8 +5,8 @@
             "label": "Start Teams App Locally",
             "dependsOn": [
                 "Validate prerequisites",
-                "Create resources",
-                "Build project",
+                "Provision",
+                "Deploy",
                 "Start application"
             ],
             "dependsOrder": "sequence"
@@ -31,7 +31,7 @@
         {
             // Create the debug resources.
             // See https://aka.ms/teamsfx-tasks/provision to know the details and how to customize the args.
-            "label": "Create resources",
+            "label": "Provision",
             "type": "teamsfx",
             "command": "provision",
             "args": {
@@ -42,7 +42,7 @@
         {
             // Build project.
             // See See https://aka.ms/teamsfx-tasks/deploy to know the details and how to customize the args.
-            "label": "Build project",
+            "label": "Deploy",
             "type": "teamsfx",
             "command": "deploy",
             "args": {
