--- a/todo-list-SPFx/.vscode/tasks.json
+++ b/todo-list-SPFx/.vscode/tasks.json
@@ -8,7 +8,7 @@
             "label": "Start Teams App Locally",
             "dependsOn": [
                 "Validate prerequisites",
-                "Create resources",
+                "Provision",
                 "gulp serve"
             ],
             "dependsOrder": "sequence"
@@ -33,11 +33,10 @@
         {
             // Create the debug resources.
             // See https://aka.ms/teamsfx-tasks/provision to know the details and how to customize the args.
-            "label": "Create resources",
+            "label": "Provision",
             "type": "teamsfx",
             "command": "provision",
             "args": {
-                "template": "${workspaceFolder}/teamsapp.local.yml",
                 "env": "local"
             }
         },
@@ -48,7 +47,6 @@
             "type": "teamsfx",
             "command": "deploy",
             "args": {
-                "template": "${workspaceFolder}/teamsapp.local.yml",
                 "env": "local"
             }
         },
