--- a/todo-list-with-Azure-backend/.vscode/tasks.json
+++ b/todo-list-with-Azure-backend/.vscode/tasks.json
@@ -8,8 +8,8 @@
             "label": "Start Teams App Locally",
             "dependsOn": [
                 "Validate & install prerequisites",
-                "Create resources",
-                "Build project",
+                "Provision",
+                "Deploy",
                 "Start services"
             ],
             "dependsOrder": "sequence"
@@ -36,22 +36,20 @@
         {
             // Create the debug resources.
             // See https://aka.ms/teamsfx-provision-task to know the details and how to customize the args.
-            "label": "Create resources",
+            "label": "Provision",
             "type": "teamsfx",
             "command": "provision",
             "args": {
-                "template": "${workspaceFolder}/teamsapp.local.yml",
                 "env": "local"
             }
         },
         {
             // Build project.
             // See https://aka.ms/teamsfx-deploy-task to know the details and how to customize the args.
-            "label": "Build project",
+            "label": "Deploy",
             "type": "teamsfx",
             "command": "deploy",
             "args": {
-                "template": "${workspaceFolder}/teamsapp.local.yml",
                 "env": "local"
             }
         },
